--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,15 +18,32 @@ jobs:
         with:
           python-version: "3.11"
 
-      - run: pip install nba_api pandas pytz urllib3 requests
+      - name: Install dependencies
+        run: pip install nba_api pandas pytz urllib3 requests
 
       - name: Run pull
-        run: python nba_pull.py
+        run: |
+          python nba_pull.py
+        continue-on-error: false
+
+      - name: Check if data directory exists
+        run: |
+          if [ -d "data" ]; then
+            echo "Data directory exists"
+            ls -la data/
+          else
+            echo "Data directory not found!"
+            exit 1
+          fi
 
       - name: Commit and push dataset
         run: |
           git config --global user.email "github-actions@github.com"
           git config --global user.name "github-actions"
           git add data/
-          git commit -m "Automated daily NBA data update" || echo "No changes to commit"
-          git push
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "Automated daily NBA data update [$(date +'%Y-%m-%d %H:%M:%S UTC')]"
+            git push
+          fi
