started exploring the training dataset

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pandas == 2.3.3
 numpy == 2.3.4
 pytz == 2025.2
 nba_api == 1.10.2
+ipykernel == 7.1.0
+scikit-learn == 1.7.2
+matplotlib == 3.10.7
+seaborn == 0.13.2
