--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+echo "data/nba_player_avgs_2*.csv" >> .gitignore
+git add .gitignore
+git commit -m "Ignore dated CSV files"
+git push origin workflow
